[CIRC-1931] - Fixing review comments.