@@ -8,11 +8,10 @@ import static org.folio.circulation.support.utils.FeeFineActionHelper.getPatronI
 
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -429,12 +428,12 @@ public class TemplateContextUtil {
         return null;
       }
         Locale loc = new Locale("",code);
-        if (Arrays.stream(Locale.getISOCountries()).collect(Collectors.toList()).contains(code)) {
+        if (Stream.of(Locale.getISOCountries()).toList().contains(code)) {
           countryName = loc.getDisplayName();
         }
         else {
-          log.info("Invalid country code " + code);
-          throw new IllegalArgumentException("Not a valid country code for the provided locale.");
+          log.info("Invalid country code {}", code);
+          throw new IllegalArgumentException("Not a valid country code to determine the country name.");
         }
       return countryName;
     }
